src/objects/Widget__c.object
<CustomObject>
    <fields>
        <fullName>Chart_Display_Fields__c</fullName>
        <label>Chart Display Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart_Fields__c</fullName>
        <label>Chart Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Limit__c</fullName>
        <label>Data Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drill_Down_Field__c</fullName>
        <label>Drill Down Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institute_Filter__c</fullName>
        <label>Institute Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Widget__c</referenceTo>
        <relationshipLabel>Widgets</relationshipLabel>
        <relationshipName>Widgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Query_Type__c</fullName>
        <label>Query Type</label>
        <picklist>
            <picklistValues>
                <fullName>Aggregate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Filter__c</fullName>
        <label>Site Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <picklist>
            <picklistValues>
                <fullName>A Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three Quarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stacked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stacked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Filter__c</fullName>
        <label>Trial Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Column</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3D_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3D Chart?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X_axis__c</fullName>
        <label>X-axis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y_axis__c</fullName>
        <label>Y - axis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Widget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>